Big update (⚠️ Proceed with caution)
- Swapped Avenir font by System-UI
- Smarter color variables
- A bunch of layout optimizations for desktop/mobile
- Also, updated About page, screenshot and _config

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "A short description."
 baseurl: ""
 url: "https://site.url"
 email: "email@site.url"
-microblog_user: "joe"
+microblog_user: "enter-username"
 permalink: "/:year/:month/:day/:title.html"
 relative_permalinks: false
 paginate: 20
